kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopeasy
  namespace: amazon-clone
  labels:
    app: shopeasy
spec:
  selector:
    app: shopeasy
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
